logs/Slang/generated/keywords/5.6.2--keyword_clocking.sv.log
name: clocking
description: The 'clocking' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_clocking.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_clocking.sv:8:8: error: expected declarator
    bit clocking;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_clocking.sv:8:9: error: language feature not yet supported
    bit clocking;
        ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_clocking.sv:8:17: error: expected identifier
    bit clocking;
                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_clocking.sv:8:18: error: expected 'endclocking'
    bit clocking;
                 ^
